# just-listened

./: .coveragerc  .flake8  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflow/: .github-ci.yaml  .github-ci.yml  github-ci.yml
.github/workflows/: github-ci.yml
deploy/: dockerfile.just_listened_api  dockerfile.migration
src/: conftest.py
src/just_listened_core/: database.py  settings.py
src/just_listened_core/adapters/: __init__.py  serializers.py
src/just_listened_core/controllers/: __init__.py  album_controller.py  authentication_controller.py  spotify_controller.py
src/just_listened_core/domain/: exceptions.py
src/just_listened_core/domain/dtos/: __init__.py  authenticate_user_dtos.py  create_album_dtos.py  get_album_dtos.py  search_spotify_dtos.py
src/just_listened_core/domain/models/: __init__.py  album.py
src/just_listened_core/external_interfaces/just_listened_api/: __init__.py  dependencies.py  main.py
src/just_listened_core/interfaces/presenters/: __init__.py  album_presenter.py  authentication_presenter.py  base_presenter.py  spotify_presenter.py
src/just_listened_core/interfaces/repositories/: __init__.py  album_repository.py
src/just_listened_core/interfaces/services/: __init__.py  spotify_service.py
src/just_listened_core/migrations/: env.py
src/just_listened_core/migrations/versions/: 2023-08-09-1238-114ea2ead835.py
src/just_listened_core/presenter/: __init__.py  album_presenter.py  authentication_presenter.py  base_presenter.py  spotify_presenter.py
src/just_listened_core/repositories/: __init__.py  postgres_album_repository.py
src/just_listened_core/services/: __init__.py  google_oauth_service.py  spotify_service.py
src/just_listened_core/tests/: dataloader.py
src/just_listened_core/tests/data/: mocks.py
src/just_listened_core/tests/factories/: __init__.py  album_factory.py
src/just_listened_core/use_cases/: __init__.py  authentication.py  create_album.py  get_album.py  search_spotify.py
(+10 files in other folders)
