[tool.poetry]
name = "just-listened"
version = "0.1.0"
description = "Just Listened"
authors = ["Gustavo Barros <gustavosbarros59@gmail.com>"]
readme = "README.md"
packages = [
    {include = "just_listened_core", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.2"
pydantic = "^2.1.1"
psycopg2-binary = "^2.9.7"


[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.0"
flake8-isort = "^6.0.0"
flake8-black = "^0.3.6"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-lazy-fixture = "^0.6.3"
pytest-flake8 = "^1.1.1"

[tool.poetry.group.dev.dependencies]
flake8-isort = "^6.0.0"
pytest-freezegun = "^0.4.2"
pytest-bdd = "^6.1.1"
factory-boy = "^3.3.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
skip = ["env", "venv"]

[tool.black]
line-length = 120